--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,8 +4,8 @@ version: 1.0.0
 # repository: https://github.com/my_org/my_repo
 
 environment:
-  sdk: ^3.5.1
-
+  sdk: '>=2.19.0 <3.0.0'
+  
 # Add regular dependencies here.
 dependencies:
   # path: ^1.8.0
